# xerqivon

./: .env  .env.example  .gitignore  README.md  app.js  config.example.js  db.js  index.html  package-lock.json  package.json  render.yaml  schema.sql  server.js  styles.css
public/: app.js  db.js  index.html  robots.txt  site.webmanifest  sitemap.xml  styles.css
public/downloads/: KNULL-setup.exe.sig
public/updates/: latest.json
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: English.nsh  installer.nsi
src-tauri/src/: lib.rs  main.rs
