[package]
name = "knull_desktop"
version = "1.0.2"
description = "KNULL desktop wrapper"
authors = ["xerqivon"]
edition = "2021"

[lib]
name = "knull_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
base64 = "0.22"
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
